--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -18,7 +18,7 @@ jobs:
           hugo-version: '0.145.0'
           extended: true
       - name: Build
-        run: hugo --baseURL "https://yusoka.github.io/hugo_test/"
+        run: hugo
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
