--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -24,5 +24,5 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./public
-          allow_empty_commit: true
+          publish_branch: gh-pages
           
