--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -4,6 +4,11 @@ on:
     branches:
       - master
 
+permissions:
+  contents: read  # リポジトリの内容への書き込み権限
+  pages: write     # GitHub Pagesの書き込み権限
+  id-token: write 
+
 jobs:
   deploy:
     runs-on: ubuntu-24.04
