--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -5,7 +5,7 @@ on:
       - master
 
 permissions:
-  contents: read  # リポジトリの内容への書き込み権限
+  contents: write  # リポジトリの内容への書き込み権限
   pages: write     # GitHub Pagesの書き込み権限
   id-token: write 
 
