--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -23,7 +23,7 @@ jobs:
           hugo-version: '0.145.0'
           extended: true
       - name: Build
-        run: hugo
+        run: hugo --baseURL "https://yskoka.github.io/hugo_test/"
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
